@@ -1,6 +1,10 @@
 1.5.0.dev
 -----------------
 
+- make sure test commands are searched first in the virtualenv 
+
+- rename README.txt to README.rst to make bitbucket happier
+
 - re-fix issue2 - add command_whitelist to be used in ``[testenv*]``
   sections, allowing to avoid warnings for commands such as ``make``,
   used from the commands value.
